Completed representation using the DOM
and added buttons to control start/stop.
Still left:
- setting start state
- separate

--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,27 @@
 h1.title {
 	margin-top: 0px;
 }
+
+.red {
+	background-color: #e74c3c;
+}
+
+.muted-red {
+	background-color: #ec7063;
+}
+
+.blue {
+	background-color: #34495e;
+}
+
+.muted-blue {
+	background-color: #415b76;
+}
+
+.light-blue {
+	background-color: #5bc0de;
+}
+
+.green {
+	background-color: #47a447;
+}
